log hubot msgs to svlogd

--- a/templates/default/sv-hubot-log-run.erb
+++ b/templates/default/sv-hubot-log-run.erb
@@ -1,2 +1,3 @@
 #!/bin/sh
-exec chpst -unobody logger -d -p local6.info -t [hubot]
+#exec chpst -unobody logger -d -p local6.info -t [hubot]
+svlogd -tt ./main
