--- a/templates/default/sv-hubot-log-run.erb
+++ b/templates/default/sv-hubot-log-run.erb
@@ -1,3 +1,2 @@
 #!/bin/sh
-#exec chpst -unobody logger -d -p local6.info -t [hubot]
-svlogd -tt ./main
+exec chpst -unobody logger -d -p local6.info -t [hubot]
